# Computer-Graphics-Competition

./: .gitignore  CMakeLists.txt  README.md
scenes/mandelbulb/: mandelbulb.json  mandelbulb_01.json
scenes/mandelbulb/full_01/: mandelbulb_full_01_fast.json  mandelbulb_full_01_high_res.json  mandelbulb_full_01_low_res.json
scenes/mandelbulb/full_02/: mandelbulb_full_02_fast.json  mandelbulb_full_02_high_res.json  mandelbulb_full_02_low_res.json
scenes/mandelbulb/zoom_01/: mandelbulb_zoom_01_fast.json  mandelbulb_zoom_01_high_res.json  mandelbulb_zoom_01_low_res.json
scenes/mandelbulb/zoom_02/: mandelbulb_zoom_02_fast.json  (+2 more)
scenes/menger_sponge/: menger_sponge.json  menger_sponge_full_high_res.json  menger_sponge_full_low_res.json
scenes/octahedron/: octahedron.json
scenes/ray_marched_sphere/: ray_marched_sphere.json
scenes/repeating_spheres/: repeating_spheres_fast.json  repeating_spheres_high_res.json  repeating_spheres_low_res.json
scenes/sierpinski_tetrahedron/: sierpinski_tetrahedron.json
scenes/sphere/: sphere.json
scenes/torus/: torus.json
source/: ray_marched_object.cpp  ray_marched_object.h  raytracer.cpp  raytracer.h  scene.cpp  scene.h  triple.cpp  triple.h
source/operations/: operation.cpp  operation.h  repeat.cpp  repeat.h  rotate.cpp  rotate.h  scale.cpp  scale.h  translate.cpp  translate.h
source/shapes/: mandelbulb.cpp  mandelbulb.h  menger_sponge.cpp  menger_sponge.h  octahedron.cpp  octahedron.h  ray_marched_sphere.cpp  ray_marched_sphere.h  sierpinski_tetrahedron.cpp  sierpinski_tetrahedron.h  torus.cpp  torus.h
(+7 files in other folders)
